// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`watch correctly adds and removes sources 1`] = `
Object {
  "tests/__fixtures__/watch/index.js": Array [
    "tests/out/696bfac4bfa16c7ff712dfff92fb80f2/main.js",
  ],
}
`;

exports[`watch correctly adds and removes sources 2`] = `
Object {
  "tests/__fixtures__/watch/index.js": Array [
    "tests/out/696bfac4bfa16c7ff712dfff92fb80f2/main.js",
  ],
  "tests/__fixtures__/watch/pass1.js": Array [
    "tests/out/696bfac4bfa16c7ff712dfff92fb80f2/main.js",
  ],
}
`;

exports[`watch correctly adds and removes sources 3`] = `
Object {
  "tests/__fixtures__/watch/index.js": Array [
    "tests/out/696bfac4bfa16c7ff712dfff92fb80f2/main.js",
  ],
}
`;
